# cppdatastream

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  conanfile.txt
include/cppdatastream/: AlignedAllocator.hpp  DataStream.hpp  Utilities.hpp
src/: Main.cpp  Utilities.cpp
